[package]
name = "phollpers"
version = "0.1.1"
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
description = "This crate provides several helper functions and traits for my projects."
readme = "./README.md"
homepage = "https://github.com/ph0llux/phollpers"
repository = "https://github.com/ph0llux/phollpers"
keywords = ["helper"]
publish = true

[lib]
name = "phollpers"
path = "src/mod.rs"
test = true
bench = true
doc = true
edition = "2024"
crate-type = ["lib"]

[dependencies]
bzip2 ={ version = "0.6.1", optional = true }
flate2 = { version = "1.1.9", optional = true }
log = { version = "0.4.29", optional = true }
lz4_flex ={ version = "0.12.0", optional = true, features = ["frame"] }
xz2 = { version = "0.1.7", optional = true }
zstd = { version = "0.13.3", optional = true }

[features]
default = ["compression"]
std = []
compression = ["std", "dep:flate2", "dep:bzip2", "dep:lz4_flex", "dep:zstd", "dep:xz2"]
read_at = ["std"]
log = ["dep:log"]